fixed overlapping

--- a/style.css
+++ b/style.css
@@ -34,12 +34,17 @@ div.main {
     margin-left: 300px;
     padding: 20px;
     flex: 1;
-    width: 100%;
+    width: calc(100% - 300px);
     height: 100%;
+    position: relative;
+    box-sizing: border-box;
 }
 div.main_frame{
     background: linear-gradient(to bottom right, #0868C0, #FFFFFF);
     top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
 }
 .sidebar {
     position: fixed;
@@ -108,7 +113,7 @@ div.element {
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    width: 100%;
+    width: auto;
     height: 450px;
     position: relative;
     border: 1px;
